[tool.poetry]
name = "pywework"
version = "0.1.0"
description = "A simple Python wrapper around Work WeiXin API."
authors = ["IkarosKun <merle.liukun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
