[tool.poetry]
name = "pywework"
version = "0.1.0"
description = "A simple Python wrapper around Work WeiXin API."
authors = ["IkarosKun <merle.liukun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
pycryptodome = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^0.730.0"
twine = "^2.0"
black = { version = "*", allows-prereleases = true }
wheel = "^0.33.6"
pytest = "^5.2"
pytest-cov = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
